--- a/package.json
+++ b/package.json
@@ -2,16 +2,12 @@
   "name": "aziona-learntube",
   "version": "1.0.0",
   "description": "AI-Powered Learning Platform",
-  "main": "index.html",
   "scripts": {
-    "dev": "vercel dev",
-    "build": "echo 'Static site build complete'",
-    "start": "vercel dev"
+    "dev": "http-server -p 8000 -c-1 --cors",
+    "start": "http-server -p 8000 -c-1 --cors",
+    "build": "echo 'No build process needed for static files'"
   },
   "keywords": ["learning", "ai", "education"],
   "author": "Your Name",
-  "license": "MIT",
-  "devDependencies": {
-    "vercel": "^32.0.0"
-  }
+  "license": "MIT"
 }
